

v 0.9.9


- added the option to enter new parameters to the SetParameter Function
- added the option to add an offset to the value distribution of MapDynamikExpr
- changed EnvelopeGate so that it creates a new Envelope instead of overwriting the old one
- fixed a bug in the core that caused EnvelopeContainer (and possibly other ContainerViews) to redraw (and recompute) their entire content every time the cursor was set to another position
- fixed a fatal bug in FoldByParameter 
- fixed a bug in ImportFrequencies that caused quince to crash when encountering frequencies below 20 Hz
- performance imporovement for ImportFrequencies
- fixed a bug in CreateGridSequence that caused quince to crash whenever CreateGridSequence was opened again after the user manually closed its UI
- fixed a bug in LilyPondExport (Tempo changes are done correctly now!)
- found a bug in ApplyPitchCurve. no fix yet. workaround: load sequences into GlissandoContainer before executing the function.	
- added a preserveTiming check box to TempoChange: If you want to keep events at the same time when played in another tempo, check this box. If you want to "transpose" the timing of a sequence, leave it unchecked.

_________________________________________________________________

v 0.9.8
September 25, 2012

- fixed a bug in ImportFrequencies
- fixed a bug in PitchGridContainer
- fixed a bug in TimeGridContainer
- fixed a bug in TempoChange
- fixed bugs in CsoundPlayer
- found a bug in AudioFilePlayer. no fix yet. workaround: avoid umlaute in filepaths!
- added lion support
- added function: ApplyPitchCurve
- added feature in GlissandoContainer, s/e automatically adjusts glissandoStart/glissandoEnd 
- added progress/feedback to document tasks
- fixed a bug in JoinByFrequency
- optimized performance of OneVoice_Loudest

_________________________________________________________________

v 0.9.7.1
August 17, 2011

- fixed a bug that prevented sessions containing PitchCurves to be saved correctly